<resources>
    <string name="app_name">US活动中心</string>

    <!--首页 MainActivity-->
    <string name="title">US活动中心</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="more">更多</string>
    <string name="mine">我的</string>
    <string name="homePage">首页</string>
    <string name="hot">热门</string>
    <string name="lecture">讲座</string>
    <string name="competition">比赛</string>
    <string name="public_welfare">公益</string>
    <string name="outdoor_activities">户外活动</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="load_error">出问题了，点击重试</string>
    <string name="none">这里空空的，什么也没有！</string>
    <string name="no_more_data">没有更多数据了！</string>

    <!--TagsActivity-->
    <string name="my_tags">我的标签</string>
    
    <!--启动页-->
    <string name="app_slogan">广州大学城\n校园活动平台</string>

    <!--登录-->
    <string name="login">登录</string>
    <string name="account_number">手机/邮箱</string>
    <string name="university">学校</string>
    <string name="password">密码</string>
    <string name="digits">0123456789abcdefghijklmnopqrstuvwxyz@.</string>
    <string name="register">注册帐号</string>
    <string name="accountName">昵称</string>

    <!--侧滑栏-->
    <string name="myTrip">我的行程</string>
    <string name="myConcernedOrganization">我关注的组织</string>
    <string name="myManagedActivity">我管理的活动</string>
    <string name="myIndividual">个人中心</string>
    <string name="thisWeek">本周</string>
    <string name="emptyTrip">今天没有什么安排哦！</string>
    <string name="recommendTrip">今日推荐行程</string>
    <string name="myConcerned">我关注的组织</string>
    <string name="individual">个人中心</string>
    <string name="empty_organization">您还没有关注任何组织哦！</string>
    <string name="emptyManaged">您还没有发布过任何活动哦！</string>
    <string name="editInfo">编辑资料</string>
    <string name="backgroundPhoto">背景照片</string>
    <string name="commit">提交</string>

    <!--DatePicker-->
    <string name="cancle">取消</string>
    <string name="title_time">请选择时间</string>
    <string name="commit_time">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>

    <string name="select_date">选择日期</string>
    <string name="current_date">当前日期</string>
    <string name="select_time">选择时间</string>
    <string name="current_time">当前时间</string>

    <!--帐号管理-->
    <string name="changePassword">修改密码</string>
    <string name="changeAccount">更换帐号</string>
    <string name="activityDetails">活动详情</string>
    <string name="headerImage">头像</string>
    <string name="school">学校</string>
    <string name="phone">发布者联系电话</string>
    <string name="name">名称</string>
    <string name="introduction">简介</string>
    <string name="managedActivity">管理的活动</string>
    <string name="accountManage">账号管理</string>
    <string name="deleted">该活动已被发布者删除！</string>
    <string name="deleteWarning">删除后不可恢复！</string>
    <string name="takephoto">拍照</string>
    <string name="chooseablum">从相册选择</string>
    <string name="string">返回</string>
    <string name="trip">行程</string>
</resources>
