<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_trip"
            android:icon="@drawable/iv_menu_trip"
            android:title="@string/myTrip" />
        <item
            android:id="@+id/nav_organization"
            android:icon="@drawable/iv_menu_organization"
            android:title="@string/myConcernedOrganization" />
        <item
            android:id="@+id/nav_activity"
            android:icon="@drawable/iv_menu_activity"
            android:title="@string/myManagedActivity" />
        <item
            android:id="@+id/nav_individual"
            android:icon="@drawable/iv_menu_individual"
            android:title="@string/myIndividual" />
    </group>
</menu>